Bug 363891 - Misleading term "Import Project"
Summary: Misleading term "Import Project"
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.2 (KDE Applications 4.14.2)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on: 358655
Blocks:
  Show dependency treegraph
 
Reported: 2016-06-03 11:06 UTC by Ralf Habacker
Modified: 2016-06-09 23:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.19.80 (KDE Applications 16.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-06-03 11:06:26 UTC
Umbrello supports importing files from a directory tree. This feature is currently named "Import Project". 

This name is misleading and may suggests that umbrello understands the syntax of  *.pro or other project files as raised at bug 358655.



Reproducible: Always

Steps to Reproduce:
1. start umbrello 
2. open menu "source code" or right click on "Logical View" in tree view.



Actual Results:  
There is a menu entry "Import Project" 

Expected Results:  
Te related entry should be renamed to "Import from Directory."
Comment 1 Ralf Habacker 2016-06-03 11:09:48 UTC
Git commit bda7ec32f936cc9759e5771f401cd0af56293786 by Ralf Habacker.
Committed on 03/06/2016 at 11:09.
Pushed by habacker into branch 'master'.

Fix 'misleading term "Import Project"'.
FIXED-IN:2.19.80 (KDE Applications 16.07.80)

M  +1    -1    umbrello/listpopupmenu.cpp
M  +1    -1    umbrello/uml.cpp

http://commits.kde.org/umbrello/bda7ec32f936cc9759e5771f401cd0af56293786
Comment 2 Ralf Habacker 2016-06-09 23:01:56 UTC
Git commit f09fd870536978e531e7055f9fb1bb2af93f587d by Ralf Habacker.
Committed on 09/06/2016 at 21:39.
Pushed by habacker into branch 'master'.

Fix 'misleading term "Import Project"'.
FIXED-IN:2.19.80 (KDE Applications 16.07.80)

M  +1    -1    umbrello/listpopupmenu.cpp
M  +1    -1    umbrello/uml.cpp

http://commits.kde.org/umbrello/f09fd870536978e531e7055f9fb1bb2af93f587d