Fix 'misleading term "Import Project"'.

BUG:363891
FIXED-IN:2.19.80 (KDE Applications 16.07.80)